# Nvy

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
UI设计参考/: logo参考.md  按钮源码.txt  新建 文本文档 (4).txt
docs/: 00_project_brief.md  01_user_profile.md  02_product_spec.md  03_tech_stack.md  04_architecture_notes.md  05_feature_backlog.md  06_acceptance_tests.md  07_decision_log.md  08_page_wireframes.md  09_mvp_development_plan.md  10_development_progress.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_metadata_cookie_access.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: README.md  app.rs  assets.rs  auth.rs  backup.rs  database.rs  defaults.rs  library.rs  llm.rs  metadata.rs  mod.rs  tags.rs
src-tauri/src/db/: mod.rs
src-tauri/src/defaults/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/metadata/: browser_cookies.rs  gfriends.rs  javbus.rs  mod.rs
src-tauri/src/tags/: mod.rs
src/app/: App.tsx  README.md  router.test.ts  router.ts
src/components/: README.md
src/domain/: README.md  actressFilter.ts  actressName.ts  appMetadata.test.ts  appMetadata.ts  carousel.ts  settingsValidation.test.ts  settingsValidation.ts  stage10Scale.test.ts  stage10ScaleData.ts  stage5Rules.test.ts  videoSearch.ts
src/pages/: ActressesPage.tsx  AppShellPreview.tsx  AuthPage.tsx  HomePage.tsx  README.md  (+3 more)
(+23 files in other folders)
